--- a/css/request.scss
+++ b/css/request.scss
@@ -34,6 +34,7 @@ div.request {
                         border: none;
                         font-size: 1rem;
                         font-family: 'Roboto Condensed', sans-serif;
+                        text-align: center;
 
                         &:focus {
                             outline: none;
