--- a/css/request.css
+++ b/css/request.css
@@ -33,19 +33,18 @@ div.request > form > table td > label {
 
 div.request > form > table td > label > input {
   border: none;
+  border-radius: 2px;
   font-size: 1rem;
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
 }
 
-div.request > form > table td > label > input:focus {
-  outline: none;
-}
-
 div.request > form > table td > button {
+  width: 35px;
   padding: 5px;
   border: 1px solid black;
   background: none;
+  background-color: white;
 }
 
 div.request > form > table tr.checked {
