--- a/css/request.css
+++ b/css/request.css
@@ -1,5 +1,5 @@
 div.request {
-  max-width: 1200px;
+  max-width: 1100px;
   margin: 2rem auto;
 }
 
@@ -13,7 +13,8 @@ div.request > form > table {
   width: 100%;
 }
 
-div.request > form > table th, div.request > form > table td {
+div.request > form > table th,
+div.request > form > table td {
   border: 1px solid black;
   text-align: center;
 }
@@ -47,8 +48,19 @@ div.request > form > table td > button {
   background-color: white;
 }
 
+div.request > form > table td.btns {
+  display: none;
+  position: absolute;
+}
+
 div.request > form > table tr.checked {
   background-color: #fde269;
+}
+
+div.request > form > table tr:hover .btns {
+  display: block;
+  padding: 6px;
+  border-left: none;
 }
 
 div.request > form > input {
