--- a/css/style.css
+++ b/css/style.css
@@ -189,11 +189,6 @@ main > section.slider {
   position: relative;
 }
 
-main > section.slider > img {
-  width: 100%;
-  height: 100vh;
-}
-
 main > section.slider > button {
   position: absolute;
   bottom: 25%;
@@ -205,10 +200,23 @@ main > section.slider > button {
   text-transform: uppercase;
 }
 
+main > section.slider > div.slider-items > div.slider-item {
+  display: none;
+}
+
+main > section.slider > div.slider-items > div.slider-item > img {
+  width: 100%;
+  height: 100vh;
+}
+
+main > section.slider > div.slider-items > div.show {
+  display: block;
+}
+
 main > section.slider > div.blackout {
   background: rgba(0, 0, 0, 0.6);
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
@@ -355,6 +363,12 @@ main > section.slider > div.circles_box > div {
 
 main > section.slider > div.circles_box > div:not(:last-child) {
   margin-right: 30px;
+}
+
+main > section.slider > div.circles_box > div.checked {
+  width: 12px;
+  height: 12px;
+  border: 3px solid #709dca;
 }
 
 main > section.offers {
