--- a/css/style.scss
+++ b/css/style.scss
@@ -175,10 +175,10 @@ main {
             align-items: center;
             position: relative;
 
-            > img {
-                width: 100%;
-                height: 100vh;
-            }
+            // > img {
+            //     width: 100%;
+            //     height: 100vh;
+            // }
 
             
             > button {
@@ -193,10 +193,28 @@ main {
             }
 
             > div {
+                &.slider-items {
+                    > div {
+                        &.slider-item {
+                            display: none;
+
+                            > img {
+                                width: 100%;
+                                height: 100vh;
+                            }
+                        }
+
+                        &.show {
+                            display: block;
+                        }
+                    }
+                }
+
                 &.blackout {
                     background: rgba(0, 0, 0, 0.6);
                     width: 100%;
-                    height: 100%;
+                    // height: 100%;
+                    height: 100vh;
                     position: absolute;
                     top: 0;
                     left: 0;
@@ -312,6 +330,12 @@ main {
 
                         &:not(:last-child) {
                             margin-right: 30px;
+                        }
+
+                        &.checked {
+                            width: 12px;
+                            height: 12px;
+                            border: 3px solid $primary-color;
                         }
                     }
                 }
