--- a/css/style.scss
+++ b/css/style.scss
@@ -333,9 +333,19 @@ main {
                         }
 
                         &.checked {
-                            width: 12px;
-                            height: 12px;
-                            border: 3px solid $primary-color;
+                            &:after {
+                                content: '';
+                                width: 20px;
+                                height: 20px;
+                                border-radius: 50%;
+                                border: 2px solid white;
+                                position: absolute;
+                                left: -7px;
+                                right: 0;
+                                top: 0;
+                                bottom: 0;
+                                margin: auto;
+                            }
                         }
                     }
                 }
