--- a/css/style.css
+++ b/css/style.css
@@ -200,17 +200,15 @@ main > section.slider > button {
   text-transform: uppercase;
 }
 
-main > section.slider > div.slider-items > div.slider-item {
-  display: none;
-}
-
-main > section.slider > div.slider-items > div.slider-item > img {
+main > section.slider > div.slider-items > img {
   width: 100%;
   height: 100vh;
+  -webkit-transition: opacity 5s ease-in-out;
+  transition: opacity 5s ease-in-out;
 }
 
-main > section.slider > div.slider-items > div.show {
-  display: block;
+main > section.slider > div.slider-items > img:not(:first-child) {
+  display: none;
 }
 
 main > section.slider > div.blackout {
