--- a/css/style.scss
+++ b/css/style.scss
@@ -194,18 +194,13 @@ main {
 
             > div {
                 &.slider-items {
-                    > div {
-                        &.slider-item {
+                    > img {
+                        width: 100%;
+                        height: 100vh;
+                        transition: opacity 5s ease-in-out;
+
+                        &:not(:first-child) {
                             display: none;
-
-                            > img {
-                                width: 100%;
-                                height: 100vh;
-                            }
-                        }
-
-                        &.show {
-                            display: block;
                         }
                     }
                 }
@@ -213,7 +208,6 @@ main {
                 &.blackout {
                     background: rgba(0, 0, 0, 0.6);
                     width: 100%;
-                    // height: 100%;
                     height: 100vh;
                     position: absolute;
                     top: 0;
