--- a/css/style.scss
+++ b/css/style.scss
@@ -194,10 +194,11 @@ main {
 
             > div {
                 &.slider-items {
+                    overflow: hidden;
+
                     > img {
                         width: 100%;
                         height: 100vh;
-                        transition: opacity 5s ease-in-out;
 
                         &:not(:first-child) {
                             display: none;
@@ -205,8 +206,17 @@ main {
                     }
                 }
 
+                @keyframes scale {
+                    0% {
+                        transform: scale(0.4);
+                    }
+                    100% {
+                        transform: scale(1);
+                    }
+                }
+
                 &.blackout {
-                    background: rgba(0, 0, 0, 0.6);
+                    background: rgba(0, 0, 0, 0.55);
                     width: 100%;
                     height: 100vh;
                     position: absolute;
