--- a/css/style.scss
+++ b/css/style.scss
@@ -42,7 +42,7 @@ header {
     left: 0;
     right: 0;
     padding: 15px 10px;
-    z-index: 2;
+    z-index: 10000;
 
     > .logo {
         height: 50px;
@@ -174,13 +174,8 @@ main {
             justify-content: center;
             align-items: center;
             position: relative;
+            min-height: 100vh;
 
-            // > img {
-            //     width: 100%;
-            //     height: 100vh;
-            // }
-
-            
             > button {
                 position: absolute;
                 bottom: 25%;
@@ -190,25 +185,45 @@ main {
                 color: white;
                 font-size: .95rem;
                 text-transform: uppercase;
+                z-index: 1000;
             }
 
             > div {
                 &.slider-items {
-                    overflow: hidden;
+                    width: 100%;
+                    height: 100vh;
+                    position: relative;
+                    z-index: 100;
 
                     > img {
-                        width: 100%;
+                        width: calc(100vw - 17px);
                         height: 100vh;
+                        position: absolute;
+                        transition: opacity 3s;
 
-                        &:not(:first-child) {
-                            display: none;
+                        &:first-child {
+                            z-index: 3;
+                        }
+
+                        &:nth-child(2) {
+                            opacity: 0;
+                            z-index: 2;
+                        }
+
+                        &:last-child {
+                            opacity: 0;
+                            z-index: 1;
+                        }
+
+                        &.scale {
+                            animation: scale 1.5s ease-out;
                         }
                     }
                 }
 
                 @keyframes scale {
                     0% {
-                        transform: scale(0.4);
+                        transform: scale(0.01);
                     }
                     100% {
                         transform: scale(1);
@@ -217,17 +232,19 @@ main {
 
                 &.blackout {
                     background: rgba(0, 0, 0, 0.55);
-                    width: 100%;
+                    width: calc(100vw - 17px);
                     height: 100vh;
                     position: absolute;
                     top: 0;
                     left: 0;
+                    z-index: 1000;
                 }
     
                 &.title {
                     position: absolute;
                     color: white;
                     text-align: center;
+                    z-index: 1000;
 
                     > h2 {
                         font-size: 3rem;
@@ -251,6 +268,7 @@ main {
                     justify-content: center;
                     align-items: center;
                     display: flex;
+                    z-index: 1000;
 
                     &:hover {
                         cursor: pointer;
@@ -325,6 +343,8 @@ main {
                     align-items: center;
                     position: absolute;
                     bottom: 12.5%;
+                    z-index: 1000;
+
                     > div {
                         width: 10px;
                         height: 10px;
